# unix_config

./: .bash_profile  .gitconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .vimrc  Dockerfile  Pipfile  README.md  ctl  flake.nix  get_setting  home.nix  requirements.txt  use_setting  use_setting.py
Hack_Font/: readme.md
deploy/: .gitignore  .yamllint  Pipfile  README.md  ansible.cfg  bootstrap_python.sh  debug.yml  deploy.yml  deploy_prompt.yml  execution-environment.yml  install_nix.sh  inventory  makefile  old_use_setting.py  out.yml  pyproject.toml  remove_nix_macosx.sh  requirements-ee.yml  requirements.txt  requirements.yml  run_deploy.sh  run_deploy_debian.sh  run_deploy_mac.sh  setup.cfg  shell.nix  site.yml  use_setting.py
deploy/collections/ansible_collections/: .gitignore
deploy/credentials/: .gitignore  clouds.yml.template
deploy/inventories/: .gitignore  inventory  inventory.yaml  nmap.yml  nmap.yml.template
deploy/molecule/default/: converge.yml  molecule.yml
deploy/openstack/: auth.yml.template  ctl_server.yaml  test_openstack_ctl.yaml
deploy/playbooks/: build_infrastructure.yaml  debug.yml  get_config_path.yaml  install_neovim.yaml  install_nodejs.yaml  local_protect_credentials.yml
deploy/playbooks/aws/: manage_instances.yml
deploy/playbooks/azure/: create_rg_vm.yaml  remove_rg.yaml
deploy/playbooks/examples/: playbook_facts.yml  run_bitwarden.yml  run_collection_bootstrap.yml
deploy/playbooks/oneoff_tools/: awx_role.yml  ceph_role.yml  debug.yml  getfacts.yml  install_neovim.yaml  install_nodejs.yaml  k3s_role.yml  microk8s_role.yml  nfs_mount.yml  noswap.yml  noswap_role.yml  password_less_sudo.yml  password_less_sudo_role.yml  ping.yml  ping_role.yml  pip.yml  postgresql_role.yml  print_facts.yml  pythondev_venv.yml  test.yml  unifi_role.yml  update_machine.yml
deploy/tasks/: azure_vm.yaml  detect_distro.yaml  install_neovim.yaml  install_nodejs.yaml  set_gb_lang.yaml
docs/: ctl  (+17 more)
services/check_git_repo/: Pipfile  main.py  pyproject.toml  readme.md  requirements.txt  setup.py
(+314 files in other folders)
