[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length=88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]

[tool.pylint]
# ignore-patterns=^services/**/*.py

[tool.mypy]
# files=test
ignore_missing_imports=true

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.poetry]
name = "deploy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^5.7.0"
openstacksdk = "^0.61.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.7.0"
flake8 = "^3.8.4"
mypy = "^0.812"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pre-commit = "^2.10.1"
cookiecutter = "^1.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
